--- a/TMessagesProj/src/main/res/values/strings_nekox.xml
+++ b/TMessagesProj/src/main/res/values/strings_nekox.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="NekoX" translatable="false">Nekogram X</string>
+    <string name="NekoX" translatable="false">PagerGram</string>
     <string name="Locked">Locked</string>
     <string name="AccDescrChatAttachEnterMenu">Chat input menu</string>
     <string name="ChatAttachEnterMenuRecordVideo">Record Video</string>
@@ -265,8 +265,8 @@
     <string name="rememberAllBackMessages">Remember all clicked replies</string>
     <string name="DisableInstantCamera">Disable instant camera</string>
     <string name="showSeconds">Show timestamp in seconds</string>
-    <string name="AppUpdateNekoX">Update Nekogram X</string>
-    <string name="NekoXUpdateTranslationHint">Press to translate the changelog</string>
+    <string name="AppUpdateNekoX">Update PagerGram</string>
+    <string name="NekoXUpdateTranslationHint">Press to translate the change log</string>
     <string name="Name">Name</string>
     <string name="channelAlias">Channel Alias</string>
     <string name="channelAliasDetails">Require label channel user enabled.</string>
