[fix] change update channel

--- a/TMessagesProj/src/main/res/values-zh-rCN/strings_nekox.xml
+++ b/TMessagesProj/src/main/res/values-zh-rCN/strings_nekox.xml
@@ -23,6 +23,7 @@
     <string name="NoUpdate">没有发现更新</string>
     <string name="UpdateAvailable">有可用的更新</string>
     <string name="UpdateUpdate">更新</string>
+    <string name="AppUpdateNekoX">更新 PagerGram</string>
     <string name="UpdateLater">稍后</string>
     <string name="DownloadFailed">下载失败</string>
     <string name="Install">安装</string>
