--- a/TMessagesProj/src/main/res/values-zh-rCN/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-zh-rCN/strings_neko.xml
@@ -142,7 +142,9 @@
     <string name="customSavePathHint">留空则保存至上层目录</string>
     <string name="doubleTapShowReactions">双击消息打开表情回应菜单</string>
     <string name="showBottomActionsWhenSelecting">长按选中消息时，显示底部操作按钮</string>
-    <string name="channelLabel">频道身份</string>
+    <string name="channelLabel">📢</string>
     <string name="forceBlurInChat">强制启用聊天背景模糊</string>
     <string name="ChatBlurAlphaValue">背景模糊度</string>
+    <string name="EditUndo">撤销</string>
+    <string name="EditRedo">重做</string>
 </resources>
