--- a/TMessagesProj/src/main/res/values/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values/strings_neko.xml
@@ -144,4 +144,6 @@
     <string name="channelLabel">📢</string>
     <string name="forceBlurInChat">Force enable Chat Blur</string>
     <string name="ChatBlurAlphaValue">Chat Blur Alpha</string>
+    <string name="EditUndo">Undo</string>
+    <string name="EditRedo">Redo</string>
 </resources>
