--- a/TMessagesProj/src/main/res/values/strings_nekox.xml
+++ b/TMessagesProj/src/main/res/values/strings_nekox.xml
@@ -273,4 +273,5 @@
     <string name="setChannelAliasName">Set Alias</string>
     <string name="labelChannelUser">Label Channel User</string>
     <string name="labelChannelUserDetails">If the message sender is \"Channel\", it will be labeled \"Channel\".</string>
+    <string name="DeletedMessage">Deleted</string>
 </resources>
