--- a/TMessagesProj/src/main/res/values-zh-rCN/strings_neko.xml
+++ b/TMessagesProj/src/main/res/values-zh-rCN/strings_neko.xml
@@ -147,4 +147,5 @@
     <string name="ChatBlurAlphaValue">背景模糊度</string>
     <string name="EditUndo">撤销</string>
     <string name="EditRedo">重做</string>
+    <string name="customTitle">自定义标题</string>
 </resources>
